# libtess2_odin

./: .gitignore  .gitmodules  README.md  bindings.odin  polygon.odin
example/: main.odin
source/: CMakeLists.txt  build_libtess2.bat  build_libtess2.sh  patch_libtess2.bat  patch_libtess2.sh
test/: svg.odin  test.odin
